# Isaac-GR00T

./: .gitignore  README.md  WORKLOG.md  pyproject.toml  troubleshoot tensorrt engine.md
calibration_data_backbone/: calibration.cache  metadata.json
calibration_data_backbone_test/: metadata.json
docker/: README.md  build.sh  how_to_finetune.txt  orin.Dockerfile
gr00t/configs/model/: gr00t_n1d6.py
gr00t/data/: stats.py
gr00t/data/dataset/: lerobot_episode_loader.py
gr00t/eval/: open_loop_eval.py
gr00t/experiment/: launch_finetune.py
gr00t/model/gr00t_n1d6/: gr00t_n1d6.py
gr00t/model/modules/: eagle_backbone.py
gr00t/model/modules/nvidia/Eagle-Block2A-2B-v2/: modeling_eagle3_vl.py  modeling_siglip2.py
gr00t/policy/: gr00t_policy.py
scripts/deployment/: ALFIE-AGX-INT8.md  README_ALFIE.md  README_ALFIE_INT8.md  README_INT8.md  benchmark_quantization.py  build_int8_pipeline.py  build_tensorrt_engine.py  calibrate_int8.py  collect_calibration_data.py  export_backbone_onnx.py  export_onnx_n1d6.py  standalone_inference_script.py  test_sdpa_backbone.py  test_sdpa_e2e.py  validate_backbone_onnx.py  verify_backbone_onnx.py
